# libvisualdata

./: CMakeLists.txt  README.md  adbscreenshotthread.cpp  adbscreenshotthread.hpp  idscamthread.cpp  idscamthread.hpp  imagesource.cpp  imagesource.hpp  test_visualdatasources.cpp  v4l2camthread.cpp  v4l2camthread.hpp  visualdatainterface.cpp  visualdatainterface.hpp
debian/: changelog  control  files  libvisualdata-dev.install  libvisualdata.install  rules
